# SmartTV-Series9

./: README.md  opensource_licenses_information.html
aacenc/: Makefile  OSS_INFO.txt
alsa/: Makefile  OSS_INFO.1.0.24.1.txt
appweb/: NOTICE.txt  OSS_INFO.txt  mtk-build.sh
atf/: OSS_INFO.txt
bash/: Makefile  OSS_INFO.txt
bluedroid/: Makefile  OSS_INFO.txt
bluedroid/1.0/bt/mediatek/: Android.mk  BUILD.gn
bluedroid/1.0/bt/mediatek/conf/: btif_config_mtk_util.c  mdroid_stack_config.c
bluedroid/1.0/bt/mediatek/hci/: twrite.c
bluedroid/1.0/bt/mediatek/include/: .gitignore  btif_config_mtk_util.h  interop_mtk.h  mdroid_buildcfg.h  mdroid_stack_config.h  mtk_bluetooth.h  mtk_bt_gatt.h  mtk_bt_gatt_client.h  mtk_bt_hf.h  mtk_bt_hh.h  mtk_bt_rc.h  twrite.h  uhid_3_10.h  uhid_3_18.h
bluedroid/1.0/bt/mediatek/interop/: interop_mtk.c
bluedroid/1.0/tool/btut/src/: BUILD.gn  btut_cli.c  btut_debug.c  btut_utl.c  edit.c  eloop.c
bluedroid/1.0/tool/btut/src/a2dp/: btut_a2dp_sink_if.c  btut_a2dp_src_if.c
bluedroid/1.0/tool/btut/src/avrcp/: btut_avrcp_ct_if.c  btut_avrcp_tg_if.c
bluedroid/1.0/tool/btut/src/gap/: btut_gap_if.c
bluedroid/1.0/tool/btut/src/gatt/: btut_gatt_if.c  btut_gattc_if.c  btut_gatts_if.c
bluedroid/1.0/tool/btut/src/hid/: btut_hid_if.c
bluedroid/1.0/tool/btut/src/tools/: btut_tools_if.c  llist_buffer.c  queue.c
boost/: NOTICE.txt  OSS_INFO.txt
busybox/: OSS_INFO.txt
c-ares/: OSS_INFO.txt
cJSON/: OSS_INFO.txt
coreutils/: Makefile  OSS_INFO.txt
curl/: OSS_INFO.txt
dfb/: OSS_INFO.txt
dibbler/: OSS_INFO.txt
dosfstools/: OSS_INFO.txt
e2fsprogs/: OSS_INFO.1.41.14.txt
electric-fence/: OSS_INFO.txt
encfs/: OSS_INFO.txt
(+1943 files in other folders)
