#
#  Copyright (C) 2015 Google, Inc.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at:
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#

executable("btut") {
  sources = [
    "btut_cli.c",
    "btut_debug.c",
    "btut_utl.c",
    "edit.c",
    "eloop.c",
    "a2dp/btut_a2dp_sink_if.c",
    "a2dp/btut_a2dp_src_if.c",
    "avrcp/btut_avrcp_ct_if.c",
    "avrcp/btut_avrcp_tg_if.c",
    "gap/btut_gap_if.c",
    "gatt/btut_gatt_if.c",
    "gatt/btut_gattc_if.c",
    "gatt/btut_gatts_if.c",
    "hid/btut_hid_if.c",
    "tools/btut_tools_if.c",
  ]

  include_dirs = [
    "//inc",
  ]

  deps = [
  ]

  libs = [
    "-ldl",
    "-lpthread",
    "-lbluetooth.default",
    "-laudio.a2dp.default",
    "-lz",
  ]
}